--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dandia</title>
 </head>
+
 <body>
     <main>
         <!-- NAVIGATION START -->
@@ -32,5 +34,14 @@
         <!-- FOOTER END -->
 
     </main>
+    <!-- BOOTSTRAP JS -->
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <!-- JQUERY -->
+    <script src="./js/jquery3.3.1.js"></script>
+    <!-- JAVASCRIPT LINK -->
+    <script src="./js/main.js"></script>
+
 </body>
+
 </html>
