add navigation bar and fix linking errors

--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dandia</title>
+    <link rel="stylesheet" href="./css/bootstrap.css">
 </head>
 
 <body>
     <main>
         <!-- NAVIGATION START -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Dandia</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">How It Works</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" class="nav-link">Register</a></li>
+                    <li><a href="#" class="nav-link">Login</a></li>
+                </ul>
+            </div>
+        </nav>
         <!-- NAVIGATION END -->
 
         <!-- BANNER START -->
@@ -34,11 +56,10 @@
         <!-- FOOTER END -->
 
     </main>
-    <!-- BOOTSTRAP JS -->
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
     <!-- JQUERY -->
     <script src="./js/jquery3.3.1.js"></script>
+        <!-- BOOTSTRAP JS -->
+        <script src="./js/bootstrap.min.js"></script>
     <!-- JAVASCRIPT LINK -->
     <script src="./js/main.js"></script>
 
