assign roles to project

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
         </nav>
         <!-- NAVIGATION END -->
 
-        <!-- BANNER START -->
+        <!-- BANNER START  Dominic -->
 
         <!-- BANNER END -->
-        <!-- FIND A RIDE START -->
+        <!-- FIND A RIDE START Dominic-->
 
         <!-- FIND A RIDE END -->
 
-        <!-- HOW IT WORKS START -->
+        <!-- HOW IT WORKS START Tichi-->
 
         <!-- HOW IT WORKS END -->
 
-        <!-- USER EXPERIENCE START -->
+        <!-- OUR EXPERIENCE START Joseph-->
 
         <!-- USER EXPERIENCE START -->
 
-        <!-- FOOTER START -->
+        <!-- FOOTER START Kolum-->
 
         <!-- FOOTER END -->
 
