add how it works cards

--- a/index.html
+++ b/index.html
@@ -44,7 +44,49 @@
         <!-- FIND A RIDE END -->
 
         <!-- HOW IT WORKS START Tichi-->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                <div class="card">
+                    <div class="card-title">
+                        <img src="img/book.jpeg" alt="" class="book">
+                    </div>
+                    <div class="card-body">
+                        <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                    </div>
+                    <div class="card-footer">
 
+                    </div>
+                </div>
+                </div>
+                <div class="col-md-4">
+                <div class="card">
+                        <div class="card-title">
+                                <img src="img/book.jpeg" alt="" class="book">
+                            </div>
+                            <div class="card-body">
+                                <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                            </div>
+                            <div class="card-footer">
+        
+                            </div>
+                </div>
+                </div>
+                <div class="col-md-4">
+                <div class="card">
+                        <div class="card-title">
+                                <img src="img/book.jpeg" alt="" class="book">
+                            </div>
+                            <div class="card-body">
+                                <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                            </div>
+                            <div class="card-footer">
+        
+                            </div>
+                </div>
+                </div>
+            </div>
+        </div>
         <!-- HOW IT WORKS END -->
 
         <!-- OUR EXPERIENCE START Joseph-->
