change content of car pool instructions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <img src="img/book.jpeg" alt="" class="book">
                     </div>
                     <div class="card-body">
-                        <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                        <p>Log on to the dandia app and log in to find a suitable ride or ride partner for you</p>
                     </div>
                     <div class="card-footer">
 
@@ -64,8 +64,8 @@
                         <div class="card-title">
                                 <img src="img/book.jpeg" alt="" class="book">
                             </div>
-                            <div class="card-body">
-                                <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                            <div class="card-body text-center">
+                                <p>Find a matching ride partner with the suitable date, time and place and request to car pool with them</p>
                             </div>
                             <div class="card-footer">
         
@@ -77,8 +77,8 @@
                         <div class="card-title">
                                 <img src="img/book.jpeg" alt="" class="book">
                             </div>
-                            <div class="card-body">
-                                <p>Log on to the dandia app and log in to find a suitable ride for you</p>
+                            <div class="card-body text-center">
+                                <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate</p>
                             </div>
                             <div class="card-footer">
         
