added container, container-fluid and social icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dandia</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -52,6 +53,21 @@
         <!-- USER EXPERIENCE START -->
 
         <!-- FOOTER START Kolum-->
+        <div class="container text-center">
+            <div class="container-fluid text-center">
+        <div class="footer-main-div ">
+            <div class="social-icons">
+                <ul>
+                    <li><a href="#" target="blank"><i class="fa fa-facebook fa-2x"></i></a></li>
+                    <li><a href="#" target="blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+                    <li><a href="#" target="blank"><i class="fa fa-google-plus fa-2x"></i></a></li>
+                    <li><a href="#" target="blank"><i><i class="fa fa-youtube fa-2x"></i></i></a></li>
+                    <li><a href="#" target="blank"><i><i class="fa fa-instagram fa-2x"></i></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
 
         <!-- FOOTER END -->
 
