add button and customize site

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
         </div>
         <!-- BANNER END -->
         <!-- FIND A RIDE START Dominic-->
-        <div class="find">
-            <div class="container-fluid">
-                <div class="container">
-                    <div class="text-center buttonpad">
-                        <button class="btn btn-primary">Find A Ride</button>
+        <div class="ride">
+            <div class="find">
+                <div class="container-fluid">
+                    <div class="container">
+                        <div class="text-center buttonpad">
+                            <button class="btn btn-primary">Find A Ride</button>
+                        </div>
                     </div>
                 </div>
             </div>
