add button and move image to card body

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
         <!-- HOW IT WORKS START Tichi-->
         <div class="container-fluid">
+            <div class="container">
             <div class="row">
                 <div class="col-md-4">
                 <div class="card">
-                    <div class="card-title">
-                        <img src="img/book.jpeg" alt="" class="book">
-                    </div>
-                    <div class="card-body">
-                        <p>Log on to the dandia app and log in to find a suitable ride or ride partner for you</p>
+                    <div class="card-title"> </div>
+                    <div class="card-body text-center">
+                        <img src="img/book.png" alt="" class="image-fluid"><br>
+                        <p>Log on to the dandia app and log in to find a suitable ride or ride partner for you from a list of available partners.</p>
                     </div>
                     <div class="card-footer">
 
@@ -61,10 +61,9 @@
                 </div>
                 <div class="col-md-4">
                 <div class="card">
-                        <div class="card-title">
-                                <img src="img/book.jpeg" alt="" class="book">
-                            </div>
+                        <div class="card-title">  </div>
                             <div class="card-body text-center">
+                                <img src="img/book.png" alt="" class="image-fluid"><br>
                                 <p>Find a matching ride partner with the suitable date, time and place and request to car pool with them</p>
                             </div>
                             <div class="card-footer">
@@ -75,9 +74,10 @@
                 <div class="col-md-4">
                 <div class="card">
                         <div class="card-title">
-                                <img src="img/book.jpeg" alt="" class="book">
+                              
                             </div>
                             <div class="card-body text-center">
+                                    <img src="img/book.png" alt="" class="image-fluid"><br>
                                 <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate</p>
                             </div>
                             <div class="card-footer">
@@ -85,7 +85,15 @@
                             </div>
                 </div>
                 </div>
+            </div>                        
             </div>
+            <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button class="btn btn-primary">Begin your Ride along journey</button>
+                        </div>
+                    </div>
+                </div>
         </div>
         <!-- HOW IT WORKS END -->
 
