add content to my banner

--- a/index.html
+++ b/index.html
@@ -41,21 +41,12 @@
             <div class="container-fluid">
                 <div class="mytext text-center">
                     <img src="./images/mylogo/logo_transparent.png" class="img-fluid" alt="">
-                    <h1>Ride Along</h1>
-                    <p>Your personal companion</p>
+                    <h1>Car Pooling Made Easier</h1>
+                    <hr>
+                    <p>Ride Along connects people with drivers travelling the same direction. Drivers offer the empty seats in their car to travellers going the same way so as to share the costs of travel and get to your destination comfortably and conveniently</p>
                 </div>
-            </div>
-        </div>
-        <!-- BANNER END -->
-        <!-- FIND A RIDE START Dominic-->
-        <div class="ride">
-            <div class="find">
-                <div class="container-fluid">
-                    <div class="container">
-                        <div class="text-center buttonpad">
-                            <button class="btn btn-primary">Find A Ride</button>
-                        </div>
-                    </div>
+                <div class="text-center buttonpad">
+                    <button class="btn btn-primary">Find A Ride</button>
                 </div>
             </div>
         </div>
