center button and add heading to how it works

--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
 
         <!-- HOW IT WORKS START Tichi-->
         <div class="container-fluid">
-            <div class="container">
+            <div class="container text-center">
+                <p></p>
+                <h2>How it works</h2>
+                <p></p>
             <div class="row">
                 <div class="col-md-4">
                 <div class="card">
                     <div class="card-title"> </div>
                     <div class="card-body text-center">
-                        <img src="img/book.png" alt="" class="image-fluid"><br>
+                        <img src="img/book.png" alt="" class="image-fluid"><br><br>
                         <p>Log on to the dandia app and log in to find a suitable ride or ride partner for you from a list of available partners.</p>
                     </div>
                     <div class="card-footer">
@@ -81,7 +84,7 @@
                 <div class="card">
                         <div class="card-title">  </div>
                             <div class="card-body text-center">
-                                <img src="img/book.png" alt="" class="image-fluid"><br>
+                                <img src="img/book.png" alt="" class="image-fluid"><br><br>
                                 <p>Find a matching ride partner with the suitable date, time and place and request to car pool with them</p>
                             </div>
                             <div class="card-footer">
@@ -90,24 +93,23 @@
                 </div>
                 </div>
                 <div class="col-md-4">
-                <div class="card">
-                        <div class="card-title">
-                              
+                    <div class="card">
+                        <div class="card-title">   
                             </div>
                             <div class="card-body text-center">
-                                    <img src="img/book.png" alt="" class="image-fluid"><br>
+                                <img src="img/book.png" alt="" class="image-fluid"><br><br>
                                 <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate</p>
                             </div>
                             <div class="card-footer">
         
                             </div>
-                </div>
+                    </div>
                 </div>
             </div>                        
             </div>
             <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-12 text-center">
                             <button class="btn btn-primary">Begin your Ride along journey</button>
                         </div>
                     </div>
