--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dandia</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -53,29 +54,97 @@
         <!-- USER EXPERIENCE START -->
 
         <!-- FOOTER START Kolum-->
-        <div class="container text-center">
-            <div class="container-fluid text-center">
-        <div class="footer-main-div ">
-            <div class="social-icons">
-                <ul>
-                    <li><a href="#" target="blank"><i class="fa fa-facebook fa-2x"></i></a></li>
-                    <li><a href="#" target="blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-                    <li><a href="#" target="blank"><i class="fa fa-google-plus fa-2x"></i></a></li>
-                    <li><a href="#" target="blank"><i><i class="fa fa-youtube fa-2x"></i></i></a></li>
-                    <li><a href="#" target="blank"><i><i class="fa fa-instagram fa-2x"></i></i></a></li>
-                </ul>
+        <!-- <!-- Footer -->
+        <footer class="page-footer font-small blue pt-4">
+
+            <!-- Footer Links -->
+            <div class="container-fluid text-center text-md-left">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-md-6 mt-md-0 mt-3">
+
+                        <!-- Content -->
+                        <h5 class="text-uppercase">Footer Content</h5>
+                        <p>Here you can use rows and columns to organize your footer content.</p>
+
+                    </div>
+                    <!-- Grid column -->
+
+                    <hr class="clearfix w-100 d-md-none pb-3">
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 3</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 4</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 class="text-uppercase">Links</h5>
+
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#!">Link 1</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 2</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 3</a>
+                            </li>
+                            <li>
+                                <a href="#!">Link 4</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
             </div>
-        </div>
-    </div>
-    </div>
+            <!-- Footer Links -->
+
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2018 Copyright:
+                <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+            </div>
+            <!-- Copyright -->
+
+        </footer>
+        <!-- Footer -->
 
         <!-- FOOTER END -->
 
     </main>
     <!-- JQUERY -->
     <script src="./js/jquery3.3.1.js"></script>
-        <!-- BOOTSTRAP JS -->
-        <script src="./js/bootstrap.min.js"></script>
+    <!-- BOOTSTRAP JS -->
+    <script src="./js/bootstrap.min.js"></script>
     <!-- JAVASCRIPT LINK -->
     <script src="./js/main.js"></script>
 
