modify paragraph in our story

--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 
         <!-- OUR STORY START Joseph-->
         <div class="container-fluid" id="cont">
-            <div class="container">
-            <h>OUR STORY</h>
-       <div class="row">
+                    <div class="container text-center">
+                            <p></p>
+                            <h>OUR STORY</h>
+    <div class="row">
         <div class="col-md-4">
           <div class="flip-card">
             <div class="flip-card-inner">
@@ -146,7 +147,7 @@
                       </div>
                       <div class="flip-card-back">
                         <h1>Ronald Kolum</h1>
-                        <p>Ride Along has been amazing for me, it has saved me time and money. I can`t imagine doing without it. Public transport is such a hustle that's why I`m so grateful to RideAlong:sparkling_heart:</p>
+                        <p>Ride Along has been amazing for me, it has saved me time and money. I can`t imagine doing without it. Public transport is such a hustle that's why I`m so grateful to RideAlong.</p>
                         <p></p>
                       </div>
                    </div>
