--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="https://bit.ly/2NFZLdA" alt="Avatar" style="width:300px;height:300px;">
+                <img src="./images/23jose.jpg" alt="Avatar" style="width:300px;height:300px;">
               </div>
             
               <div class="flip-card-back">
@@ -206,7 +206,7 @@
                 <div class="flip-card">
                        <div class="flip-card-inner">
                          <div class="flip-card-front">
-                           <img src="https://bit.ly/373bbj2" alt="Avatar" style="width:300px;height:300px;">
+                           <img src="./images/23june.png" alt="Avatar" style="width:300px;height:300px;">
                          </div>
                          <div class="flip-card-back">
                            <h1>June Mugure</h1>
@@ -222,7 +222,7 @@
              <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="https://bit.ly/371bBGQ" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="./images/23kolum.jpeg" alt="Avatar" style="width:300px;height:300px;">
                       </div>
                       <div class="flip-card-back">
                         <h1>Ronald Kolum</h1>
@@ -243,7 +243,7 @@
         <!-- USER EXPERIENCE START -->
 
         <!-- FOOTER START Kolum-->
-        <!-- <!-- Footer -->
+        <!--  Footer -->
         <footer class="page-footer font-small blue pt-4">
 
             <!-- Footer Links -->
