--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         <!-- HOW IT WORKS START Tichi-->
         <div class="container-fluid">
             <div class="container text-center">
-                <p></p>
+                <p></p><br>
                 <h2>How it works</h2>
-                <p></p>
+                <p></p><br>
             <div class="row">
                 <div class="col-md-4">
                 <div class="card">
@@ -161,7 +161,7 @@
                             </div>
                             <div class="card-body text-center">
                                 <img src="img/book.png" alt="" class="image-fluid"><br><br>
-                                <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate</p>
+                                <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate; Begin a new and fun experience</p>
                             </div>
                             <div class="card-footer">
         
@@ -172,8 +172,8 @@
             </div>
             <div class="container">
                     <div class="row">
-                        <div class="col-md-12 text-center">
-                            <button class="btn btn-primary">Begin your Ride along journey</button>
+                        <div class="col-md-12 text-center"><br><br>
+                            <button class="btn btn-primary">Begin your Ride along journey</button> <br><br>
                         </div>
                     </div>
                 </div>
