add style to our story

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="card-title">   
                             </div>
                             <div class="card-body text-center">
-                                <img src="img/book.png" alt="" class="image-fluid"><br><br>
+                                <img src="img/book.png" alt="Avatar" class="image-fluid"><br><br>
                                 <p>Get to agreed meet up point at the agreed upon time and connect with your car pool mate</p>
                             </div>
                             <div class="card-footer">
