styling the css footer 'clear clear

--- a/index.html
+++ b/index.html
@@ -193,15 +193,16 @@
         <!-- USER EXPERIENCE START -->
 
         <!-- FOOTER START Kolum-->
+        <footer>
         <div class="footer-top">
           <div class="container">
               <div class="row">
                   <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
-                      <h3>RideAlong</h3>
-                      <p>Hope in ride with us, <br><h4>spread the love</h4></p>
+                      <h3>Ride Along</h3>
+                      <p>Hope in ride with us, <br><h4>Spread the love</h4></p>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12 segment-two">
-                      <h3>RideAlong</h3>
+                      <h3>Ride Along</h3>
                       <ul>
                           <li><a href="#">support</a></li>
                           <li><a href="#">blog</a></li>
@@ -210,7 +211,8 @@
                       </ul>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12 segment-three">
-                      <h3>follow us</h3>
+                      <h3>Follow Us On</h3>
+                      <p>Link with us to have fun</p>
                       <a href="#"><i class="fa fa-tumblr fa-3x"></i></a>
                       <a href="#"><i class="fa fa-twitter fa-3x"></i></a>
                       <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
@@ -218,16 +220,18 @@
                       <a href="#"><i class="fa fa-pinterest fa-3x"></i></a>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12 segment-four">
-                      <h2>our news letter</h2>
+                      <h2>News Letter</h2>
                       <p>Guys subsceibe to ournewsletter to connct with us</p>
                       <form action="">
-                          <input type="email">
+                          <input type="email"> 
                           <input type="submit" value="subscribe">
                       </form>
                   </div>
               </div>
           </div> 
         </div>
+        <p class="footer-bottom-text">All Right Reserve by &copy;RideAlong.2019</p>
+    </footer>
         <!-- FOOTER END -->
 
     </main>
