--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form>
+                    <form id="myform">
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
                                 <i class="fas fa-user prefix grey-text"></i>
@@ -141,42 +141,45 @@
 
         <!-- HOW IT WORKS START Tichi-->
         <div class="container-fluid">
-                <div class="container">
-                        <h5 class="text-center pt-4">How It Works</h5>
-                        <div class="row">
-                            <div class="col-sm-4 py-2">
-                                <div class="card h-100 border-primary color">
-                                    <img src="./images/login.svg" class="card-img-top " alt="...">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Log In</h3>
-                                        <p class="card-text">Log on to the dandia app and log in to find a suitable ride or ride partner
-                                            for you from a list of available partners.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 py-2">
-                                <div class="card h-100 border-primary color">
-                                    <img src="./images/my.png" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Find A Ride</h3>
-                                        <p class="card-text">Find a matching ride partner with the suitable date, time and place and
-                                            request to car pool with them</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 py-2">
-                                <div class="card h-100 border-primary color">
-                                    <img src="./images/diver.png" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Meet Up</h3>
-                                        <p class="card-text">
-                                            Get to agreed meet up point at the agreed upon time and connect with your car pool mate;
-                                            Begin a new and fun experience</p>
-                                    </div>
-                                </div>
+            <div class="container">
+                <h5 class="text-center pt-4">How It Works</h5>
+                <div class="row">
+                    <div class="col-sm-4 py-2">
+                        <div class="card h-100 border-primary color">
+                            <img src="./images/login.svg" class="card-img-top " alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Log In</h3>
+                                <p class="card-text">Log on to the dandia app and log in to find a suitable ride or ride
+                                    partner
+                                    for you from a list of available partners.</p>
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-4 py-2">
+                        <div class="card h-100 border-primary color">
+                            <img src="./images/my.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Find A Ride</h3>
+                                <p class="card-text">Find a matching ride partner with the suitable date, time and place
+                                    and
+                                    request to car pool with them</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 py-2">
+                        <div class="card h-100 border-primary color">
+                            <img src="./images/diver.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Meet Up</h3>
+                                <p class="card-text">
+                                    Get to agreed meet up point at the agreed upon time and connect with your car pool
+                                    mate;
+                                    Begin a new and fun experience</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center"><br><br>
@@ -252,44 +255,46 @@
 
         <!-- FOOTER START Kolum-->
         <footer>
-        <div class="footer-top">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
-                      <h3>Ride Along</h3>
-                      <p>Hope in ride with us, <br><h4>Spread the love</h4></p>
-                  </div>
-                  <div class="col-md-3 col-sm-6 col-xs-12 segment-two">
-                      <h3>Ride Along</h3>
-                      <ul>
-                          <li><a href="#">support</a></li>
-                          <li><a href="#">blog</a></li>
-                          <li><a href="#">event</a></li>
-                          <li><a href="#">career</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-md-3 col-sm-6 col-xs-12 segment-three">
-                      <h3>Follow Us On</h3>
-                      <p>Link with us to have fun</p>
-                      <a href="#"><i class="fa fa-tumblr fa-3x"></i></a>
-                      <a href="#"><i class="fa fa-twitter fa-3x"></i></a>
-                      <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-                      <a href="#"><i class="fa fa-linkedin fa-3x"></i></a>
-                      <a href="#"><i class="fa fa-pinterest fa-3x"></i></a>
-                  </div>
-                  <div class="col-md-3 col-sm-6 col-xs-12 segment-four">
-                      <h2>News Letter</h2>
-                      <p>Guys subsceibe to ournewsletter to connct with us</p>
-                      <form action="">
-                          <input type="email"> 
-                          <input type="submit" value="subscribe">
-                      </form>
-                  </div>
-              </div>
-          </div> 
-        </div>
-        <p class="footer-bottom-text">All Right Reserve by &copy;RideAlong.2019</p>
-    </footer>
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
+                            <h3>Ride Along</h3>
+                            <p>Hope in ride with us, <br>
+                                <h4>Spread the love</h4>
+                            </p>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 segment-two">
+                            <h3>Ride Along</h3>
+                            <ul>
+                                <li><a href="#">support</a></li>
+                                <li><a href="#">blog</a></li>
+                                <li><a href="#">event</a></li>
+                                <li><a href="#">career</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 segment-three">
+                            <h3>Follow Us On</h3>
+                            <p>Link with us to have fun</p>
+                            <a href="#"><i class="fa fa-tumblr fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-twitter fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-linkedin fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-pinterest fa-3x"></i></a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 segment-four">
+                            <h2>News Letter</h2>
+                            <p>Guys subsceibe to ournewsletter to connct with us</p>
+                            <form action="">
+                                <input type="email">
+                                <input type="submit" value="subscribe">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="footer-bottom-text">All Right Reserve by &copy;RideAlong.2019</p>
+        </footer>
         <!-- FOOTER END -->
 
     </main>
