--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Dandia</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -150,13 +151,18 @@
                                     <div class="card-body">
                                         <h3 class="card-title">Log In</h3>
                                         <p class="card-text">Log on to the dandia app and log in to find a suitable ride or ride partner
-                                            for you from a list of available partners.</p>
+                                            for you from a list of available partners.
+                                          <br>  <span class="fa fa-star checked"></span>
+                                            <span class="fa fa-star checked"></span>
+                                            <span class="fa fa-star checked"></span>
+                                            <span class="fa fa-star"></span>
+                                            <span class="fa fa-star"></span></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-4 py-2">
                                 <div class="card h-100 border-primary color">
-                                    <img src="./images/my.png" class="card-img-top" alt="...">
+                                    <img src="./images/muride.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Find A Ride</h3>
                                         <p class="card-text">Find a matching ride partner with the suitable date, time and place and
@@ -166,7 +172,7 @@
                             </div>
                             <div class="col-sm-4 py-2">
                                 <div class="card h-100 border-primary color">
-                                    <img src="./images/diver.png" class="card-img-top" alt="...">
+                                    <img src="./images/myride.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Meet Up</h3>
                                         <p class="card-text">
